# dapcs-oso-framework

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Containerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README_HELLOWORLD.md  libep11.so.4.1.2  pyproject.toml  requirements.txt
contracts/: README.md  common.sh  create-backend.sh  create-frontend.sh  create-grep11.sh  get_workloads.sh
contracts/backend/: backend.yml.tftpl  terraform.tf  terraform.tfvars.template  user_data_backend.tf  user_data_common.tf  variables.tf
contracts/frontend/: .gitignore  frontend.yml.tftpl  terraform.tf  terraform.tfvars.template  user_data_common.tf  user_data_frontend.tf  variables.tf
contracts/grep11/: .gitignore  certs.tf  grep11-c16.yml.tftpl  terraform.tfvars.template  user_data_grep11.tf  variables.tf
contracts/output/frontend/: .gitignore
deploy/: configmap.yq
deploy/certs/: .gitignore  Makefile  ext
deploy/local/: .gitignore  ext  play.yaml  play_data.yaml
deploy/mock/: .gitignore  Makefile  play.yml
docs/: api.rst  conf.py  config.rst  index.rst
osopluginsrv/: gen_txsign.py  handler.sh  server.sh  test.py  tx.json  tx1.json  txsigned.json
src/helloworld/: helloworld.py
src/oso/framework/: exceptions.py
src/oso/framework/auth/: common.py  extension.py  mtls.py
src/oso/framework/config/: __init__.py  _manager.py
tests/data/v1.3/: valid-Document-withMetadata.json  valid-Document-withoutMetadata.json  valid-DocumentList-0.json  valid-Error-0.json
tests/oso/framework/: conftest.py  test_logging.py
(+46 files in other folders)
